objects/delphiDemo__Delphi_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>delphiDemo__Amount_Mean__c</fullName>
        <label>Amount Mean</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Amount_Prediction_Status__c</fullName>
        <label>Amount Prediction Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Amount_Std_Deviation__c</fullName>
        <label>Amount Std Deviation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Base_URL__c</fullName>
        <label>Base URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Configuration_Type__c</fullName>
        <label>Configuration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>delphiDemo__Last_Model_Run__c</fullName>
        <label>Last Model Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Last_Prediction_Run__c</fullName>
        <label>Last Prediction Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Model_Status__c</fullName>
        <label>Model Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Prediction_Status__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <label>Prediction Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__RFE_Fields__c</fullName>
        <label>RFE Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Selected_Field_Account__c</fullName>
        <label>Selected Field Account</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Selected_Field_User__c</fullName>
        <label>Selected Field User</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Selected_Fields__c</fullName>
        <label>Selected Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Time_Mean__c</fullName>
        <defaultValue>&apos;0.0&apos;</defaultValue>
        <label>Time Mean</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Time_Prediction_Status__c</fullName>
        <label>Time Prediction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>delphiDemo__Time_Std_Deviation__c</fullName>
        <label>Time Std Deviation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Delphi Configuration</label>
    <listViews>
        <fullName>delphiDemo__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dephi Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dephi Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>